--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.cdnfonts.com/css/aceh" rel="stylesheet">
                 
     <script src="script.js"></script>
+    <script id="DragDropTouch" src="https://bernardo-castilho.github.io/DragDropTouch/DragDropTouch.js"></script>
 
     <title>Mastermind</title>
 </head>
